--- a/src/modules/healths/i18n/en.json
+++ b/src/modules/healths/i18n/en.json
@@ -1,17 +1,10 @@
 {
   "error": {
-    "project-not-found": "Project not found",
-    "profile-not-found": "Profile not found",
-    "project-already-exist": "Project title already exist"
+    "queue-stats-not-found": "Queue stats not found"
   },
   "success": {
-    "create-project": "Project created successful",
-    "create-complete-project": "Complete project created successful",
-    "update-project": "Project updated successful",
-    "remove-project": "Project removed successful",
-    "detail-project": "Project detail retrieved successful",
-    "project-list": "Project list retrieved successful",
-    "profile-list": "Profile list retrieved successful",
-    "task-list": "Task list retrieved successful"
+    "db-health": "Database health status retrieved successful",
+    "queue-stats": "RabbitMQ queue statistics retrieved successful",
+    "queue-list": "RabbitMQ queue list retrieved successful"
   }
 }
